giant refactor / cleanup

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>on the issues</title>
+  <title>TITLE</title>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
   <link href="/master.css" rel="stylesheet">
-  <script src="https://cdn.auth0.com/w2/auth0-7.6.1.min.js"></script>
   <!-- favicons -->
   <meta name="apple-mobile-web-app-status-bar-style" content="white">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -28,17 +27,3 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
-<div class="Overlay">
-  <div class="OverlayClose">Close</div>
-  <div class="OverlayContent"></div>
-</div>
-<div id="SnackbarCont"></div>
-<header class="globalHeader">
-  <a href="/user">
-    <div class="logo">
-      <img src="/_img/logo.svg">
-      <span class="Display2" id="headerName"></span>
-      <span class="Display2">takesissue.org</span>
-    </div>
-  </a>
-</header>
