creating landingpage.styl and added to master.styl

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,9 @@
 <% include partials/header %>
 
-<h1>hello, world</h1>
+<div class="LeftImg">
+  <img src="">
+</div>
+<div class="RightContent">
+</div>
 
 <% include partials/footer %>
