working zip submit

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,3 +27,8 @@
   <meta name="theme-color" content="#ffffff">
 </head>
 <body>
+<div id="SnackbarCont"></div>
+<div class="Overlay">
+  <div class="OverlayClose">Close</div>
+  <div class="OverlayContent"></div>
+</div>
