--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <% include partials/header %>
 
-<h1>hello, world</h1>
+<h1 class="Display1">Do you know who represents you?</h1>
+<form id="zipForm">
+  <input type="text" name="zip" id="zipInput" value="98144">
+  <input type="submit" value="Go">
+</form>
+<div id="officialList"></div>
 
 <% include partials/footer %>
