added landingpage flag image

--- a/public/master.css
+++ b/public/master.css
@@ -677,7 +677,7 @@ label.error {
   float: left;
 }
 .RightHalf {
-  background: #f00;
+  background: #ff3700;
   height: 100vw;
   width: 50%;
   position: relative;
