--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -18,12 +18,12 @@
       <div>
         <input type="number" pattern="[0-9]*" maxlength="3">
       </div>
-      <button class="ZipGo">
+      <button class="BtnGo">
         Go
       </button>
     </div>
     <p class="LandingPageQuote">
-      “When the people become involved… government becomes more accountable, and our society is stronger.”
+      &ldquo;When the people become involved&hellip; government becomes more accountable, and our society is stronger.&rdquo;
     </p>
     <p>
       -Arnold Schwarzenegger
