--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -5,7 +5,7 @@
   float: left;
 }
 .RightHalf {
-  background: red;
+  background: #FF3700;
   height:100vw;
   width: 50%;
   position: relative;
@@ -29,6 +29,6 @@
 .WhiteText {
   color: white;
 }
-.ZipGo {
-  
+.BtnGo {
+
 }
