--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -1,12 +1,14 @@
 .LeftHalf {
-  background: #ccc;
-  height: 100vw;
+  background: url("/_img/people_flag.png");
+  background-repeat: no-repeat;
+  background-size:100%;
+  height: 100vh;
   width: 50%;
   float: left;
 }
 .RightHalf {
   background: #FF3700;
-  height:100vw;
+  height:100vh;
   width: 50%;
   position: relative;
   float: right;
