--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -1,15 +1,15 @@
 <% include partials/header %>
 
-<div class="LeftHalf">
+<div class="FlagImgContainer">
   <img src="">
 </div>
-<div class="RightHalf">
+<div class="RedContainer">
   <div class="LandingPageContainer">
     <div class="TinyLogo"></div>
     <h1 class="Display1 WhiteText mt8">
       Do you know who represents you?
     </h1>
-    <div>
+    <form>
       <div>
         <label>
         Enter your email
@@ -18,10 +18,10 @@
       <div>
         <input type="number" pattern="[0-9]*" maxlength="3">
       </div>
-      <button class="BtnGo">
-        Go
-      </button>
-    </div>
+      <div>
+        <input type="submit" value="Go">
+      <div>
+    </form>
     <p class="LandingPageQuote">
       &ldquo;When the people become involved&hellip; government becomes more accountable, and our society is stronger.&rdquo;
     </p>
