--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -1,18 +1,29 @@
-.LeftHalf {
+.FlagImgContainer {
   background: url("/_img/people_flag.png");
   background-repeat: no-repeat;
   background-size:100%;
-  height: 100vh;
-  width: 50%;
-  float: left;
+  height: 10vh;
+  width: 100%;
 }
-.RightHalf {
+  @media laptop {
+    .FlagImgContainer {
+      height: 100vh;
+      width: 50%;
+      float: left;
+    }
+  }
+.RedContainer {
   background: #FF3700;
-  height:100vh;
-  width: 50%;
-  position: relative;
-  float: right;
+  height: auto;
 }
+  @media laptop {
+    .RedContainer {
+      height:100vh;
+      width: 50%;
+      position: relative;
+      float: right;
+    }
+  }
 .LandingPageContainer {
   position: relative;
   top: 10rem;
@@ -30,7 +41,4 @@
 }
 .WhiteText {
   color: white;
-}
-.BtnGo {
-
 }
