--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -1,44 +1,49 @@
 .FlagImgContainer {
-  background: url("/_img/people_flag.png");
+  background: url("/_img/people_only.png");
   background-repeat: no-repeat;
   background-size:100%;
-  height: 10vh;
+  height: 35vh;
   width: 100%;
 }
   @media laptop {
     .FlagImgContainer {
+      background: url("/_img/people_only.png");
       height: 100vh;
       width: 50%;
       float: left;
     }
   }
-.RedContainer {
+.RedBackground {
   background: #FF3700;
-  height: auto;
+  height: 100vh;
 }
   @media laptop {
-    .RedContainer {
+    .RedBackground {
       height:100vh;
       width: 50%;
       position: relative;
       float: right;
     }
   }
-.LandingPageContainer {
-  position: relative;
-  top: 10rem;
-  left: 22%;
-  height: 90%;
-  width: 60%;
-}
-.TinyLogo {
+.TinyLogo{
   background-image: url("/_img/logo.svg");
+  background-repeat: no-repeat;
   background-size: 100%;
   height:18px;
   width: 26px;
-  position: relative;
-  top: 2rem;
 }
+.TinyLogoLandingPage {
+  position: relative;
+  top: 4rem;
+  left: 4rem;
+}
+  @media laptop {
+
+  }
 .WhiteText {
   color: white;
+}
+.BuiltBy {
+  position: relative;
+  bottom: 5%;
 }
