--- a/public/master.css
+++ b/public/master.css
@@ -33,7 +33,7 @@ html {
 }
 body,
 p {
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 .unselectable {
   -moz-user-select: none;
@@ -697,6 +697,11 @@ label.error {
     float: right;
   }
 }
+.Display3 {
+  margin: 7rem 4rem 0 4rem;
+  font-size: 4rem;
+  font-family: serif;
+}
 .TinyLogo {
   background-image: url("/_img/logo.svg");
   background-repeat: no-repeat;
@@ -709,10 +714,45 @@ label.error {
   top: 4rem;
   left: 4rem;
 }
+label {
+  display: block;
+  margin: 4rem 4rem 0 4rem;
+  font-size: 1.5rem;
+}
+.InputZip {
+  margin: 0 2rem 0 4rem;
+  border: none;
+  background: #ff3700;
+  border-bottom: 1px solid #fff;
+  height: 3rem;
+  width: 21rem;
+}
+.SubmitZip {
+  background: #fff;
+  border: none;
+  border-radius: 5px;
+  color: #ff3700;
+  height: 3.5rem;
+  width: 6.5rem;
+  font-size: 1.5rem;
+}
 .WhiteText {
   color: #fff;
 }
+.LandingPageQuote {
+  margin: 10rem 4rem 0 4rem;
+}
+.LandingPageQuoteSpan {
+  font-style: italic;
+}
 .BuiltBy {
-  position: relative;
-  bottom: 5%;
+  margin: 6rem 14rem 0 4rem;
+  width: 50%;
+}
+.BlackText {
+  color: #000;
+}
+.BorderBottomBlack {
+  border-bottom: 1px solid #000;
+  padding: 0 0 2px 0;
 }
