--- a/views/landingpage.ejs
+++ b/views/landingpage.ejs
@@ -24,9 +24,11 @@
   <p class="BuiltBy">
     Built by <a href="https://twitter.com/jeremypbeasley"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
   </p>
-  <button class="BtnGitHub">
-    GitHub
-  </button>
+  <a href="https://github.com/jeremypbeasley/who-representsme"
+    <button class="BtnGitHub">
+      GitHub
+    </button>
+  </a>
 </div>
 
 <% include partials/footer %>
