--- a/public/master.css
+++ b/public/master.css
@@ -678,9 +678,11 @@ label.error {
 }
 @media (min-width: 62em) {
   .FlagImgContainer {
-    background: url("/_img/people_only.png");
+    background: url("/_img/people_flag.png") no-repeat;
+    background-position: center center;
+    background-size: 100%;
     height: 100vh;
-    width: 50%;
+    width: 60%;
     float: left;
   }
 }
@@ -691,7 +693,7 @@ label.error {
 @media (min-width: 62em) {
   .RedBackground {
     height: 100vh;
-    width: 50%;
+    width: 40%;
     position: relative;
     float: right;
   }
@@ -700,6 +702,11 @@ label.error {
   margin: 7rem 4rem 0 4rem;
   font-size: 4rem;
   font-family: serif;
+}
+@media (min-width: 62em) {
+  .Display3 {
+    font-size: 6rem;
+  }
 }
 .TinyLogo {
   background-image: url("/_img/logo.svg");
@@ -717,6 +724,11 @@ label {
   display: block;
   margin: 4rem 4rem 0 4rem;
   font-size: 1.5rem;
+}
+@media (min-width: 62em) {
+  label {
+    margin: 7rem 4rem 0 4rem;
+  }
 }
 .InputZip {
   margin: 0 2rem 0 4rem;
@@ -741,12 +753,23 @@ label {
 .LandingPageQuote {
   margin: 10rem 4rem 0 4rem;
 }
+@media (min-width: 62em) {
+  .LandingPageQuote {
+    width: 75%;
+    margin: 8rem 4rem 0 4rem;
+  }
+}
 .LandingPageQuoteSpan {
   font-style: italic;
 }
 .BuiltBy {
   margin: 6rem 14rem 0 4rem;
   width: 50%;
+}
+@media (min-width: 62em) {
+  .BuiltBy {
+    width: 75%;
+  }
 }
 .BlackText {
   color: #000;
@@ -768,4 +791,10 @@ label {
   border: none;
   top: -4rem;
   right: 3rem;
+}
+@media (min-width: 62em) {
+  .BtnGitHub {
+    right: 8rem;
+    top: -2rem;
+  }
 }
