--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -29,7 +29,7 @@ img {
   justify-content: flex-start;
   align-content: flex-start ;
 }
-.officialList {
+#officialList {
   display: flex;
   flex-wrap: wrap;
 }
