I'm not sure what's happening but okay

--- a/public/master.css
+++ b/public/master.css
@@ -468,7 +468,7 @@ img {
   justify-content: flex-start;
   align-content: flex-start;
 }
-.officialList {
+#officialList {
   display: flex;
   flex-wrap: wrap;
 }
