inject random zip in zipInput

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <h1 class="Display1">Do you know who represents you?</h1>
 <form id="zipForm">
-  <input type="text" name="zip" id="zipInput" value="98144">
+  <input type="text" name="zip" id="zipInput">
   <input type="submit" value="Go">
 </form>
 <div id="officialList"></div>
