integrated index and landingpage

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -15,12 +15,12 @@
       float: left;
     }
   }
-.RedBackground {
+.RedBackgroundContainer {
   background: #FF3700;
   height: 100vh;
 }
   @media laptop {
-    .RedBackground {
+    .Container {
       height:100vh;
       width: 50%;
       position: relative;
@@ -67,6 +67,8 @@ label {
   border-bottom: 1px solid white;
   height: 3rem;
   width: 21rem;
+  font-size: 1.5rem;
+  color: white;
 }
 .SubmitZip {
   background: white;
