fixed merge conflict, changed container div names

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -1,4 +1,4 @@
-.FlagImgContainer {
+.HeroImgContainer {
   background: url("/_img/people_only.png");
   background-repeat: no-repeat;
   background-size:100%;
@@ -6,7 +6,7 @@
   width: 100%;
 }
   @media laptop {
-    .FlagImgContainer {
+    .HeroImgContainer {
       background: url("/_img/people_flag.png") no-repeat;
       background-position: center center;
       background-size:100%;
@@ -15,7 +15,7 @@
       float: left;
     }
   }
-.RedBackgroundContainer {
+.ContentContainer {
   background: #FF3700;
   height: 100vh;
 }
