--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <% include partials/header %>
-<div class="FlagImgContainer"></div>
-<div class="RedBackgroundContainer">
+<div class="HeroImgContainer"></div>
+<div class="ContentContainer">
   <div class="TinyLogo TinyLogoLandingPage"></div>
   <h1 class="Display1 Display3 WhiteText">
     Do you know who represents you?
@@ -30,15 +30,5 @@
   </a>
   <div id="officialList"></div>
 </div>
-
-<<<<<<< HEAD
-=======
-<h1 class="Display1">Do you know who represents you?</h1>
-<form id="zipForm">
-  <input type="text" name="zip" id="zipInput">
-  <input type="submit" value="Go">
-</form>
-<div id="officialList"></div>
->>>>>>> ec03a1751921512810c71d884af346eeadd10c15
 
 <% include partials/footer %>
