--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -27,14 +27,8 @@
       float: right;
     }
   }
-.Display3 {
-  margin: 7rem 4rem 0 4rem;
-  font-size: 4rem;
-  font-family: serif;
-  width: 75%;
-}
 @media laptop {
-  .Display3 {
+  .Display1 {
     font-size: 6rem;
   }
 }
@@ -44,11 +38,9 @@
   background-size: 100%;
   height:18px;
   width: 26px;
-}
-.TinyLogoLandingPage {
-  position: relative;
-  top: 4rem;
-  left: 4rem;
+    position: relative;
+    top: 4rem;
+    left: 4rem;
 }
 label {
   display: block;
@@ -94,7 +86,7 @@ label {
 .LandingPageQuoteSpan {
   font-style: italic;
 }
-.BuiltBy {
+.SiteCredit {
   margin: 6rem 14rem 0 4rem;
   width: 50%;
 }
@@ -110,22 +102,19 @@ label {
   border-bottom: 1px solid #000;
   padding: 0 0 2px 0;
 }
-.BtnGitHub {
+.ImgGitHub {
   height: 18px;
   width: 18px;
   text-align: center;
-  background: url(_img/github_logo.png) no-repeat;
   background-position: center center;
   text-indent: -9999px;
   position: relative;
-  outline: none
   float: right;
-  border: none;
   top: -4rem;
   right: 3rem;
 }
 @media laptop {
-  .BtnGitHub {
+  .ImgGitHub {
     right: 20rem;
     top: -2rem;
   }
