--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -36,8 +36,11 @@ h1,h2,h3,h4,h5,h6 {
 	cursor: default;
 }
 .Display1 {
-	font-family: typeface-secondary;
+	font-family: serif;
 	font-size: 3rem;
+  margin: 7rem 4rem 0 4rem;
+  font-size: 4rem;
+  width: 75%;
 }
 .Display2 {
 	font-family: typeface-secondary;
