--- a/public/master.css
+++ b/public/master.css
@@ -72,8 +72,11 @@ h6 {
   cursor: default;
 }
 .Display1 {
-  font-family: CircularStdBold, ArialBold, sans-serif;
+  font-family: serif;
   font-size: 3rem;
+  margin: 7rem 4rem 0 4rem;
+  font-size: 4rem;
+  width: 75%;
 }
 .Display2 {
   font-family: CircularStdBold, ArialBold, sans-serif;
@@ -698,14 +701,8 @@ label.error {
     float: right;
   }
 }
-.Display3 {
-  margin: 7rem 4rem 0 4rem;
-  font-size: 4rem;
-  font-family: serif;
-  width: 75%;
-}
 @media (min-width: 62em) {
-  .Display3 {
+  .Display1 {
     font-size: 6rem;
   }
 }
@@ -715,8 +712,6 @@ label.error {
   background-size: 100%;
   height: 18px;
   width: 26px;
-}
-.TinyLogoLandingPage {
   position: relative;
   top: 4rem;
   left: 4rem;
@@ -765,7 +760,7 @@ label {
 .LandingPageQuoteSpan {
   font-style: italic;
 }
-.BuiltBy {
+.SiteCredit {
   margin: 6rem 14rem 0 4rem;
   width: 50%;
 }
@@ -781,22 +776,19 @@ label {
   border-bottom: 1px solid #000;
   padding: 0 0 2px 0;
 }
-.BtnGitHub {
+.ImgGitHub {
   height: 18px;
   width: 18px;
   text-align: center;
-  background: url("_img/github_logo.png") no-repeat;
   background-position: center center;
   text-indent: -9999px;
   position: relative;
-  outline: none;
   float: right;
-  border: none;
   top: -4rem;
   right: 3rem;
 }
 @media (min-width: 62em) {
-  .BtnGitHub {
+  .ImgGitHub {
     right: 20rem;
     top: -2rem;
   }
