--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <% include partials/header %>
 <div class="HeroImgContainer"></div>
 <div class="ContentContainer">
-  <div class="TinyLogo TinyLogoLandingPage"></div>
+  <div class="TinyLogo"></div>
   <h1 class="Display1 Display3 WhiteText">
     Do you know who represents you?
   </h1>
@@ -14,19 +14,17 @@
   </form>
   <div class="LandingPageQuote WhiteText">
     <p class="LandingPageQuoteSpan">
-      &ldquo;When the people become involved&hellip; government becomes more accountable, and our society is stronger.&rdquo;
+      &ldquo;When the people become involved... government becomes more accountable, and our society is stronger.&rdquo;
     </p>
     <p class="mt4">
       &ndash;Arnold Schwarzenegger
     </p>
   </div>
-  <p class="BuiltBy">
-    Built by <a href="https://twitter.com/jeremypbeasley"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
+  <p class="SiteCredit">
+    Built by <a href="https://twitter.com/jeremypbeasley" target="_blank"><span class="BlackText BorderBottomBlack">@jeremypbeasley</span></a> and <a href="https://twitter.com/jennminerva" target="_blank"><span class="BlackText BorderBottomBlack">@jennminerva</span></a>
   </p>
-  <a href="https://github.com/jeremypbeasley/who-representsme"
-    <button class="BtnGitHub">
-      GitHub
-    </button>
+  <a href="https://github.com/jeremypbeasley/who-representsme" target="_blank">
+    <img class="ImgGitHub" src="_img/github_logo.png" alt="GitHub">
   </a>
   <div id="officialList"></div>
 </div>
