made requested CSS changed

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -1,15 +1,15 @@
 .HeroImgContainer {
-  background: url("/_img/people_only.png");
+  background: url(_img/people_only.png);
   background-repeat: no-repeat;
-  background-size:100%;
+  background-size: 100%;
   height: 35vh;
   width: 100%;
 }
   @media laptop {
     .HeroImgContainer {
-      background: url("/_img/people_flag.png") no-repeat;
+      background: url (_img/people_flag.png); no-repeat;
       background-position: center center;
-      background-size:100%;
+      background-size: 100%;
       height: 100vh;
       width: 50%;
       float: left;
@@ -33,7 +33,7 @@
   }
 }
 .TinyLogo{
-  background-image: url("/_img/logo.svg");
+  background-image: url(_img/logo.svg);
   background-repeat: no-repeat;
   background-size: 100%;
   height:18px;
@@ -80,10 +80,10 @@ label {
   @media laptop {
     .LandingPageQuote {
       width: 75%;
-      margin: 8rem 4rem 0 4rem
+      margin: 8rem 4rem 0 4rem;
     }
   }
-.LandingPageQuoteSpan {
+.Italic {
   font-style: italic;
 }
 .SiteCredit {
@@ -107,7 +107,6 @@ label {
   width: 18px;
   text-align: center;
   background-position: center center;
-  text-indent: -9999px;
   position: relative;
   float: right;
   top: -4rem;
