--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <input type="submit" value="Go" class="SubmitZip">
   </form>
   <div class="LandingPageQuote WhiteText">
-    <p class="LandingPageQuoteSpan">
+    <p class="Italic">
       &ldquo;When the people become involved... government becomes more accountable, and our society is stronger.&rdquo;
     </p>
     <p class="mt4">
