moved type classes to tyle.styl

--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -97,3 +97,12 @@ button.filled, button:hover, .submitButton:hover {
 	background-size: 11px;
 	background-position: 9px 8px;
 }
+.WhiteText {
+  color: white;
+}
+.Italic {
+  font-style: italic;
+}
+.BlackText {
+  color: #000;
+}
