--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -7,12 +7,13 @@
 }
   @media laptop {
     .HeroImgContainer {
-      background: url (_img/people_flag.png); no-repeat;
+      background: url ("_img/people_flag.png") no-repeat;
       background-position: center center;
       background-size: 100%;
       height: 100vh;
       width: 50%;
       float: left;
+
     }
   }
 .ContentContainer {
@@ -33,7 +34,7 @@
   }
 }
 .TinyLogo{
-  background-image: url(_img/logo.svg);
+  background-image: url("_img/logo.svg");
   background-repeat: no-repeat;
   background-size: 100%;
   height:18px;
