--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -7,13 +7,12 @@
 }
   @media laptop {
     .HeroImgContainer {
-      background: url ("_img/people_flag.png") no-repeat;
+      background: url("_img/people_flag.png") no-repeat;
       background-position: center center;
       background-size: 100%;
       height: 100vh;
       width: 50%;
       float: left;
-
     }
   }
 .ContentContainer {
@@ -21,11 +20,12 @@
   height: 100vh;
 }
   @media laptop {
-    .Container {
+    .ContentContainer {
       height:100vh;
       width: 50%;
       position: relative;
       float: right;
+      padding: 0 0 0 11rem;
     }
   }
 @media laptop {
@@ -39,9 +39,9 @@
   background-size: 100%;
   height:18px;
   width: 26px;
-    position: relative;
-    top: 4rem;
-    left: 4rem;
+  position: relative;
+  top: 4rem;
+  left: 4rem;
 }
 label {
   display: block;
@@ -72,21 +72,15 @@ label {
   width: 6.5rem;
   font-size: 1.5rem;
 }
-.WhiteText {
-  color: white;
-}
 .LandingPageQuote {
   margin: 10rem 4rem 0 4rem;
 }
   @media laptop {
     .LandingPageQuote {
-      width: 75%;
+      width: 60%;
       margin: 8rem 4rem 0 4rem;
     }
   }
-.Italic {
-  font-style: italic;
-}
 .SiteCredit {
   margin: 6rem 14rem 0 4rem;
   width: 50%;
@@ -95,9 +89,6 @@ label {
   .BuiltBy {
     width: 75%;
   }
-}
-.BlackText {
-  color: #000;
 }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
