--- a/public/master.css
+++ b/public/master.css
@@ -78,6 +78,11 @@ h6 {
   font-size: 4rem;
   width: 75%;
 }
+@media (min-width: 62em) {
+  .Display1 {
+    width: 60%;
+  }
+}
 .Display2 {
   font-family: CircularStdBold, ArialBold, sans-serif;
   font-size: 2rem;
@@ -87,6 +92,15 @@ h6 {
   font-family: CircularStdBold, ArialBold, sans-serif;
   text-transform: uppercase;
   letter-spacing: 0.05rem;
+}
+.WhiteText {
+  color: #fff;
+}
+.Italic {
+  font-style: italic;
+}
+.BlackText {
+  color: #000;
 }
 button,
 .submitButton {
@@ -133,15 +147,6 @@ button:hover,
   background-repeat: no-repeat;
   background-size: 11px;
   background-position: 9px 8px;
-}
-.WhiteText {
-  color: #fff;
-}
-.Italic {
-  font-style: italic;
-}
-.BlackText {
-  color: #000;
 }
 .mb0 {
   margin-bottom: 4px;
@@ -690,7 +695,7 @@ label.error {
 }
 @media (min-width: 62em) {
   .HeroImgContainer {
-    background: url "_img/people_flag.png" no-repeat;
+    background: url("_img/people_flag.png") no-repeat;
     background-position: center center;
     background-size: 100%;
     height: 100vh;
@@ -703,11 +708,12 @@ label.error {
   height: 100vh;
 }
 @media (min-width: 62em) {
-  .Container {
+  .ContentContainer {
     height: 100vh;
     width: 50%;
     position: relative;
     float: right;
+    padding: 0 0 0 11rem;
   }
 }
 @media (min-width: 62em) {
@@ -754,20 +760,14 @@ label {
   width: 6.5rem;
   font-size: 1.5rem;
 }
-.WhiteText {
-  color: #fff;
-}
 .LandingPageQuote {
   margin: 10rem 4rem 0 4rem;
 }
 @media (min-width: 62em) {
   .LandingPageQuote {
-    width: 75%;
+    width: 60%;
     margin: 8rem 4rem 0 4rem;
   }
-}
-.Italic {
-  font-style: italic;
 }
 .SiteCredit {
   margin: 6rem 14rem 0 4rem;
@@ -777,9 +777,6 @@ label {
   .BuiltBy {
     width: 75%;
   }
-}
-.BlackText {
-  color: #000;
 }
 .BorderBottomBlack {
   border-bottom: 1px solid #000;
