added share form

--- a/public/master.css
+++ b/public/master.css
@@ -798,3 +798,21 @@ label {
     top: -2rem;
   }
 }
+.InputContainer {
+  border: 1px solid #ff3700;
+  border-radius: 5px;
+  width: 89%;
+  margin: 2rem;
+}
+.InputShare {
+  border: none;
+  height: 29px;
+  width: 200px;
+  margin: 0 0 0 15px;
+  border-right: 1px solid #ff3700;
+  background: transparent;
+}
+.SubmitShare {
+  border: none;
+  background: transparent;
+}
