--- a/views/results.ejs
+++ b/views/results.ejs
@@ -2,4 +2,14 @@
 
 <h1>These people do:</h1>
 
+<form>
+  <label class="Display1 ml3">
+    Share this?
+  </label>
+  <div class="InputContainer">
+    <input type="text" value="http://who-representsme.com" class="InputShare">
+    <input type="submit" value="Copy link" class="SubmitShare">
+  </div>
+</form>
+
 <% include partials/footer %>
