--- a/views/results.ejs
+++ b/views/results.ejs
@@ -7,7 +7,7 @@
     Share this?
   </label>
   <div class="InputContainer">
-    <input type="text" value="http://who-representsme.com" class="InputShare">
+    <input type="text" value="http://who-represents.me" class="InputShare">
     <input type="submit" value="Copy link" class="SubmitShare">
   </div>
 </form>
