--- a/_resources/_styles/results.styl
+++ b/_resources/_styles/results.styl
@@ -8,13 +8,18 @@
 }
 .InputShare {
   border: none;
-  height: 29px;
-  width: 200px;
-  margin: 0 0 0 15px;
+  height: 2.9rem;
+  width: 23rem;
+  margin: 0 0 0 1.5rem;
   border-right: 1px solid #FF3700;
   background: transparent;
+  font-size: 1.4rem;
+  color: #888;
 }
 .SubmitShare {
   border: none;
   background: transparent;
+  font-size: 1.4rem;
+  color: #FF3700;
+  padding: 0 1rem;
 }
