--- a/_resources/_styles/type.styl
+++ b/_resources/_styles/type.styl
@@ -34,6 +34,10 @@ h1,h2,h3,h4,h5,h6 {
 	position relative
 	cursor: default;
 }
+h1 {
+  font-size: 1.6rem;
+  font-family: serif;
+}
 .Display1 {
 	font-family: serif;
 	font-size: 3rem;
