attempted to undo safari's default input styling

--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -88,6 +88,9 @@ img {
 .officialBio {
   opacity: 1;
 }
+input, textarea, select {
+   -webkit-appearance: none;
+}
 input:focus {
   border-color: black;
   outline: none;
