--- a/_resources/_styles/results.styl
+++ b/_resources/_styles/results.styl
@@ -7,17 +7,22 @@
   margin: 2rem;
 }
 .InputShare {
+  -webkit-appearance: none;
+  border-radius: 0;
   border: none;
   height: 2.9rem;
-  width: 23rem;
-  margin: 0 0 0 1.5rem;
+  width: 24rem;
+  margin: 0 0 0 .5rem;
   border-right: 1px solid #FF3700;
   background: transparent;
   font-size: 1.4rem;
   color: #888;
+
 }
 .SubmitShare {
+  -webkit-appearance: none;
   border: none;
+  border-radius: 0
   background: transparent;
   font-size: 1.4rem;
   color: #FF3700;
