--- a/views/results.ejs
+++ b/views/results.ejs
@@ -4,7 +4,7 @@
 
 <form>
   <label class="Display1 ml3">
-    Share this?
+    <h1>Share this?</h1>
   </label>
   <div class="InputContainer">
     <input type="text" value="http://who-represents.me" class="InputShare">
