--- a/_resources/_styles/results.styl
+++ b/_resources/_styles/results.styl
@@ -6,6 +6,12 @@
   width: 89%;
   margin: 2rem;
 }
+// overrides mobile safari input styling
+input {
+    -webkit-appearance: none;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+}
 .InputShare {
   border-radius: 0;
   border: none;
@@ -16,7 +22,7 @@
   background: transparent;
   font-size: 1.4rem;
   color: #888;
-
+  webkit-appearance: none;
 }
 .SubmitShare {
   border: none;
