fixed mobile safari background bug

--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -6,14 +6,13 @@ html
   -webkit-font-smoothing antialiased
   font-smoothing antialiased
   box-sizing border-box
-
 body {
   height 100%
   overflow-y auto
   overflow-x hidden
   margin 0
+  background: #FF3700;
 }
-
 .hidden {
   display none
   opacity 0
