made requested changes

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -18,6 +18,7 @@
 .ContentContainer {
   background: #FF3700;
   height: 100vh;
+  overflow: scroll;
 }
   @media laptop {
     .ContentContainer {
@@ -28,11 +29,6 @@
       padding: 0 0 0 11rem;
     }
   }
-@media laptop {
-  .Display1 {
-    font-size: 6rem;
-  }
-}
 .TinyLogo{
   background-image: url("_img/logo.svg");
   background-repeat: no-repeat;
