--- a/_resources/_styles/results.styl
+++ b/_resources/_styles/results.styl
@@ -1,9 +1,10 @@
 // SHARE THIS MODULE
 
-.InputContainer {
+.ShareContainer {
   border: 1px solid #FF3700;
   border-radius: 5px;
   width: 89%;
+  max-width: 34rem;
   margin: 2rem;
 }
 // overrides mobile safari input styling
@@ -24,7 +25,7 @@ input {
   color: #888;
   webkit-appearance: none;
 }
-.SubmitShare {
+.BtnShare {
   border: none;
   border-radius: 0
   background: transparent;
