--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <div class="HeroImgContainer"></div>
 <div class="ContentContainer">
   <div class="TinyLogo"></div>
-  <h1 class="Display1 Display3 WhiteText">
+  <h1 class="WhiteText">
     Do you know who represents you?
   </h1>
   <form id="zipForm">
