--- a/public/master.css
+++ b/public/master.css
@@ -72,10 +72,6 @@ h6 {
   cursor: default;
 }
 h1 {
-  font-size: 2.6rem;
-  font-family: serif;
-}
-.Display1 {
   font-family: serif;
   font-size: 3rem;
   margin: 7rem 4rem 0 4rem;
@@ -83,13 +79,14 @@ h1 {
   width: 75%;
 }
 @media (min-width: 62em) {
-  .Display1 {
+  h1 {
     width: 60%;
+    font-size: 6rem;
   }
 }
-.Display2 {
-  font-family: CircularStdBold, ArialBold, sans-serif;
-  font-size: 2rem;
+h2 {
+  font-size: 2.6rem;
+  font-family: serif;
 }
 .Caption {
   font-size: 1.1rem;
@@ -715,6 +712,7 @@ label.error {
 .ContentContainer {
   background: #ff3700;
   height: 100vh;
+  overflow: scroll;
 }
 @media (min-width: 62em) {
   .ContentContainer {
@@ -723,11 +721,6 @@ label.error {
     position: relative;
     float: right;
     padding: 0 0 0 11rem;
-  }
-}
-@media (min-width: 62em) {
-  .Display1 {
-    font-size: 6rem;
   }
 }
 .TinyLogo {
@@ -807,10 +800,11 @@ label {
     top: -2rem;
   }
 }
-.InputContainer {
+.ShareContainer {
   border: 1px solid #ff3700;
   border-radius: 5px;
   width: 89%;
+  max-width: 34rem;
   margin: 2rem;
 }
 input {
@@ -830,7 +824,7 @@ input {
   color: #888;
   webkit-appearance: none;
 }
-.SubmitShare {
+.BtnShare {
   border: none;
   border-radius: 0;
   background: transparent;
