--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,15 +1,12 @@
 <% include partials/header %>
-
-<h1>These people do:</h1>
-
-<form>
-  <label class="Display1 ml3">
-    <h1>Share this?</h1>
-  </label>
-  <div class="InputContainer">
-    <input type="text" value="http://who-represents.me" class="InputShare">
-    <input type="submit" value="Copy link" class="SubmitShare">
-  </div>
-</form>
-
+<!-- <h1>These people do:</h1> -->
+<h2 class="ml3">
+  Share this?
+</h2>
+<div class="ShareContainer">
+  <input type="text" value="http://who-represents.me" class="InputShare">
+  <button class="BtnShare">
+    Copy link
+  </button>
+</div>
 <% include partials/footer %>
