--- a/_resources/_styles/fonts.css
+++ b/_resources/_styles/fonts.css
@@ -25,3 +25,12 @@
          url('_fonts/CircularStdBlack.ttf') format('truetype'),
          url('_fonts/CircularStdBlack.svg#CircularStdBlack') format('svg');
 }
+@font-face {
+    font-family: 'Iowanoldstyle';
+    src: url('fonts/Iowanoldstyle.eot');
+    src: url('fonts/Iowanoldstyle.eot') format('embedded-opentype'),
+         url('fonts/Iowanoldstyle.woff2') format('woff2'),
+         url('fonts/Iowanoldstyle.woff') format('woff'),
+         url('fonts/Iowanoldstyle.ttf') format('truetype'),
+         url('fonts/Iowanoldstyle.svg#Iowanoldstyle') format('svg');
+}
