--- a/public/master.css
+++ b/public/master.css
@@ -25,6 +25,15 @@
          url('_fonts/CircularStdBlack.ttf') format('truetype'),
          url('_fonts/CircularStdBlack.svg#CircularStdBlack') format('svg');
 }
+@font-face {
+    font-family: 'Iowanoldstyle';
+    src: url('fonts/Iowanoldstyle.eot');
+    src: url('fonts/Iowanoldstyle.eot') format('embedded-opentype'),
+         url('fonts/Iowanoldstyle.woff2') format('woff2'),
+         url('fonts/Iowanoldstyle.woff') format('woff'),
+         url('fonts/Iowanoldstyle.ttf') format('truetype'),
+         url('fonts/Iowanoldstyle.svg#Iowanoldstyle') format('svg');
+}
 
 html {
   font-size: 10px;
@@ -65,14 +74,13 @@ h6 {
   margin: 0 0;
   padding: 0 0;
   font-size: 1rem;
-  font-family: CircularStdBold, ArialBold, sans-serif;
   font-weight: normal;
   line-height: 130%;
   position: relative;
   cursor: default;
 }
 h1 {
-  font-family: serif;
+  font-family: 'Iowanoldstyle';
   font-size: 3rem;
   margin: 7rem 4rem 0 4rem;
   font-size: 4rem;
@@ -86,7 +94,7 @@ h1 {
 }
 h2 {
   font-size: 2.6rem;
-  font-family: serif;
+  font-family: 'Iowanoldstyle';
 }
 .Caption {
   font-size: 1.1rem;
