added opacity .5 to type.styl

--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,5 +1,8 @@
 <% include partials/header %>
-<!-- <h1>These people do:</h1> -->
+<div class="ResultsLocation">
+  <p>Seattle, WA 98144</p>
+  <
+</div>
 <h2 class="ml3">
   Share this?
 </h2>
