--- a/views/results.ejs
+++ b/views/results.ejs
@@ -1,7 +1,10 @@
 <% include partials/header %>
 <div class="ResultsLocation">
   <p>Seattle, WA 98144</p>
-  <
+  <a class=>Clear</a>
+</div>
+<div class="ResultsIndividual">
+
 </div>
 <h2 class="ml3">
   Share this?
