--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -12,6 +12,7 @@
   transition: all 100ms ease-out;
   opacity: 0;
   transform: scale(1.03);
+  display: none;
 }
 .Overlay.Active {
   opacity: 1;
