basic style for desktop overlay

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -14,6 +14,12 @@
   transform: scale(1.03);
   display: none;
 }
+@media laptop {
+  .Overlay {
+    width: 50vw;
+    left: 50vw;
+  }
+}
 .Overlay.Active {
   opacity: 1;
   transform: scale(1);
