fade bg on overlay open

--- a/_resources/_styles/base.styl
+++ b/_resources/_styles/base.styl
@@ -10,7 +10,8 @@ body {
   height 100%
   overflow-y auto
   overflow-x hidden
-  margin 0
+  margin 0;
+  background: black;
 }
 .hidden {
   display none
