--- a/public/master.css
+++ b/public/master.css
@@ -474,6 +474,7 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   margin: 0;
+  background: #000;
 }
 .hidden {
   display: none;
@@ -708,6 +709,10 @@ label.error {
   background-size: 100%;
   height: 35vh;
   width: 100%;
+  transition: all 200ms ease-out;
+}
+.HeroImgContainer.InActive {
+  opacity: 0.5;
 }
 @media (min-width: 62em) {
   .HeroImgContainer {
