--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -9,9 +9,10 @@
   left: 0;
   top: 0;
   z-index: 999;
-  transition: all 200ms ease-out;
+  transition: all 100ms ease-out;
+  box-shadow: 0px 0px 126px 0px rgba(0,0,0,0.7);
   opacity: 0;
-  transform: scale(1.03);
+  //transform: translateX(100px);
   display: none;
 }
 @media laptop {
@@ -22,7 +23,7 @@
 }
 .Overlay.Active {
   opacity: 1;
-  transform: scale(1);
+  //transform: translateX(0px);
 }
 .OverlayClose {
   position: fixed;
@@ -41,4 +42,20 @@
 }
 .OverlayContent {
   margin-top: 55px;
+}
+@media laptop {
+  .OverlayScrim {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    background: black;
+    height: 100vh;
+    display: none;
+    opacity: 0;
+    transition: all 100ms ease-out;
+  }
+  .OverlayScrim.Active {
+    opacity: .8;
+  }
 }
