--- a/public/master.css
+++ b/public/master.css
@@ -670,9 +670,9 @@ label.error {
   left: 0;
   top: 0;
   z-index: 999;
-  transition: all 200ms ease-out;
+  transition: all 100ms ease-out;
+  box-shadow: 0px 0px 126px 0px rgba(0,0,0,0.7);
   opacity: 0;
-  transform: scale(1.03);
   display: none;
 }
 @media (min-width: 62em) {
@@ -683,7 +683,6 @@ label.error {
 }
 .Overlay.Active {
   opacity: 1;
-  transform: scale(1);
 }
 .OverlayClose {
   position: fixed;
@@ -703,16 +702,28 @@ label.error {
 .OverlayContent {
   margin-top: 55px;
 }
+@media (min-width: 62em) {
+  .OverlayScrim {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    background: #000;
+    height: 100vh;
+    display: none;
+    opacity: 0;
+    transition: all 100ms ease-out;
+  }
+  .OverlayScrim.Active {
+    opacity: 0.8;
+  }
+}
 .HeroImgContainer {
   background: url("_img/people_only.png");
   background-repeat: no-repeat;
   background-size: 100%;
   height: 35vh;
   width: 100%;
-  transition: all 200ms ease-out;
-}
-.HeroImgContainer.InActive {
-  opacity: 0.5;
 }
 @media (min-width: 62em) {
   .HeroImgContainer {
