--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Who represents me?</title>
+  <title>TITLE</title>
   <meta charset="UTF-8">
   <meta content="width=device-width, initial-scale=1.0, user-scalable=no" name="viewport">
   <link href="/master.css" rel="stylesheet">
