vertically centered content on index.ejs

--- a/_resources/_styles/landingpage.styl
+++ b/_resources/_styles/landingpage.styl
@@ -27,6 +27,9 @@
     position: relative;
     float: right;
     padding: 0 0 0 11rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 .TinyLogo{
