--- a/public/master.css
+++ b/public/master.css
@@ -747,6 +747,9 @@ label.error {
     position: relative;
     float: right;
     padding: 0 0 0 11rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 }
 .TinyLogo {
