--- a/_resources/_styles/results.styl
+++ b/_resources/_styles/results.styl
@@ -27,7 +27,7 @@ input {
 }
 .BtnShare {
   border: none;
-  border-radius: 0
+  border-radius: 0;
   background: transparent;
   font-size: 1.4rem;
   color: #FF3700;
