added flex to official list

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -59,3 +59,18 @@
     opacity: .8;
   }
 }
+
+// OFFICIALS
+
+.OfficialsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  // min-width: 375px;
+}
+.OfficialIndividualContainer {
+  background: #ccc;
+  min-width: 45%;
+  margin: 1rem 2rem 2rem 0;
+  display: flex;
+
+}
