added width to official containers

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -62,6 +62,10 @@
 
 // OFFICIALS
 
+.OfficialContainer {
+  width: 37rem;
+}
+
 .OfficialsContainer {
   display: flex;
   flex-wrap: wrap;
@@ -72,5 +76,5 @@
   min-width: 45%;
   margin: 1rem 2rem 2rem 0;
   display: flex;
-
+  width: 37rem;
 }
