positioned officials on page and added op50 class to their info

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -62,19 +62,16 @@
 
 // OFFICIALS
 
-.OfficialContainer {
-  width: 37rem;
-}
-
-.OfficialsContainer {
+.AllOfficialsContainer {
   display: flex;
   flex-wrap: wrap;
-  // min-width: 375px;
+  padding: 0 0 0 6rem;
 }
-.OfficialIndividualContainer {
-  background: #ccc;
+.IndividualOfficialContainer {
   min-width: 45%;
   margin: 1rem 2rem 2rem 0;
-  display: flex;
   width: 37rem;
+}
+.OfficialInfo {
+  margin: 0 0 0 17rem;
 }
