--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -64,7 +64,7 @@
 
 .AllOfficialsContainer {
   display: flex;
-  // flex-direction: column;
+  flex-direction: column;
   margin: 1rem;
 }
   @media laptop {
