positioned rep containers in mobile and laptop views

--- a/_resources/_styles/overlays.styl
+++ b/_resources/_styles/overlays.styl
@@ -65,19 +65,21 @@
 .AllOfficialsContainer {
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  margin: 0 auto;
+  padding: 1rem;
+
 }
   @media laptop {
     .AllOfficialsContainer {
       flex-direction: row;
       flex-wrap: wrap;
-      padding: 0 0 0 6rem;
+      padding: 0 0 0 3rem;
     }
   }
 .IndividualOfficialContainer {
   min-width: 45%;
-  margin: 1rem 2rem 2rem 0;
-  width: 37rem;
+  padding: 1rem 2rem 2rem 0;
+  margin: 0 auto;
 }
 .OfficialInfo {
   margin: 0 0 0 17rem;
