--- a/public/master.css
+++ b/public/master.css
@@ -721,19 +721,20 @@ label.error {
 .AllOfficialsContainer {
   display: flex;
   flex-direction: column;
-  margin: 1rem;
+  margin: 0 auto;
+  padding: 1rem;
 }
 @media (min-width: 62em) {
   .AllOfficialsContainer {
     flex-direction: row;
     flex-wrap: wrap;
-    padding: 0 0 0 6rem;
+    padding: 0 0 0 3rem;
   }
 }
 .IndividualOfficialContainer {
   min-width: 45%;
-  margin: 1rem 2rem 2rem 0;
-  width: 37rem;
+  padding: 1rem 2rem 2rem 0;
+  margin: 0 auto;
 }
 .OfficialInfo {
   margin: 0 0 0 17rem;
