--- a/public/master.css
+++ b/public/master.css
@@ -732,9 +732,13 @@ label.error {
   }
 }
 .IndividualOfficialContainer {
-  min-width: 45%;
+  max-width: 45%;
   padding: 1rem 2rem 2rem 0;
-  margin: 0 auto;
+}
+@media (min-width: 30em) {
+  .AllOfficialsContainer {
+    margin: 0 auto;
+  }
 }
 .OfficialInfo {
   margin: 0 0 0 17rem;
